# ts-anomaly-llm

./: README.md  pyproject.toml  requirements.txt
configs/: config.yaml  models.yaml
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
docs/: architecture.md  model_comparison.md
scripts/: seed_data.py  train.py
src/: __init__.py
src/anomaly/: __init__.py  base.py  detector_factory.py  isolation_forest.py  lstm_autoencoder.py  transformer_ae.py
src/api/: main.py  schemas.py
src/api/routes/: detect.py  explain.py  models.py
src/dashboard/: app.py  callbacks.py  layout.py
src/ingestion/: __init__.py  influxdb_writer.py  kafka_consumer.py  redis_consumer.py
src/llm/: __init__.py  context_builder.py  explainer.py  prompts.py
tests/: conftest.py  test_anomaly_models.py  test_api.py  test_explainer.py
